--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
   <div id="caixaLogin">
     <form [formGroup]="formLogin">
     
-    <img src="http://www.detalheprotetico.com.br/img/Logo_Detalhes_2.png" width='230'/>
+    <img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='120'/>
     <br><br>
     <input type='text' formControlName="email" class='form-control' placeholder="Login" (click)="resetForm()"/>
     <div *ngIf="submited && formLogin.get('email').hasError('required')" class="avisoForm">Campo <b>login</b> deve ser preenchido</div>
