--- a/src/app/home/abrirpedido/abrirpedido.component.html
+++ b/src/app/home/abrirpedido/abrirpedido.component.html
@@ -54,11 +54,11 @@
         <table>
             <tr>
                 <td valign="top" padding="30px" id='tdSelTipoProdutoVariavel' style='display:none'> 
-                    <select class='form-control' formControlName="tipoVariavel" id='selTipoProdutoVariavel' (click)="resetAvisoForm();" style='display:none'>
+                    <select class='form-control' formControlName="tipoVariavel" id='selTipoProdutoVariavel' (click)="resetAvisoFormItem();"  style='display:none'>
                         <option value='' disabled>Tipo</option>
-                        <option value='10'>Diversos
-                        <option value='9'>Grampo
-                        <option value='8'>Máscara
+                        <option value=10>Diversos
+                        <option value=9>Grampo
+                        <option value=8>Máscara
                     </select>
 
                  </td>   
@@ -69,11 +69,11 @@
             <option value='' disabled>Produto</option>
             <option *ngFor="let produtoPadrao of produtosPadraoClinica" [value]="produtoPadrao.produtoId">{{produtoPadrao.nome}} - R$ {{produtoPadrao.valor}}</option>
         </select>
-       <input type='text' formControlName="descProdVariavel" id="descProdVariavel" class='form-control' placeholder="Descrição" style="display:none;">
+       <input type='text' formControlName="descProdVariavel" id="descProdVariavel" class='form-control' placeholder="Descrição" style="display:none;" (click)="resetAvisoFormItem();" >
     
        </td>
        <td width='120' padding="30px" id='tdValorProdVariavel'>
-           <input type='number' step="0.50" min="1.00" class="form-control" placeholder='Valor' id='valorProdVariavel' /></td>
+           <input type='number' step="0.50" min="1.00" class="form-control" placeholder='Valor' formControlName='valorProdVariavel' id='valorProdVariavel' (click)="resetAvisoFormItem();"  /></td>
            
       
        <td valign="top" padding="30px">
@@ -106,13 +106,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let produtoEscolhido of produtosEscolhidos; let i= index" id='item_{{produtoEscolhido.produtoId}}'>
+                <tr *ngFor="let produtoEscolhido of produtosEscolhidos; let i= index" id='{{produtoEscolhido.tipoProduto}}_{{produtoEscolhido.produtoId}}'>
                     <td>{{i + 1}}</td>
                     <td>{{produtoEscolhido.nome}}</td>
                     <td>{{produtoEscolhido.valor | currency }}</td>
                     <td>{{produtoEscolhido.qde}}</td>
                     <td>{{produtoEscolhido.valorTotal | currency }}</td>
-                    <td><i class="material-icons" (click)="deleteItem(produtoEscolhido.produtoId)" style='cursor:pointer;color: #FB8C00;'>delete_outline</i></td>
+                    <td><i class="material-icons" (click)="deleteItem(produtoEscolhido.produtoId, produtoEscolhido.ordem)" style='cursor:pointer;color: #FB8C00;'>delete_outline</i></td>
                 </tr> 
                 <tr>
                     <td  colspan='4'><b>Valor Total</b></td>
@@ -176,12 +176,12 @@
                 <td><b>Qde</b></td>
                 <td><b>Total</b></td>
              </tr>
-             <tr *ngFor="let itemPadrao of pedido.itensPadrao; let i= index; ">
+             <tr *ngFor="let item of pedido.itens; let i= index; ">
                 <td>{{i + 1}}</td>
-                <td>{{itemPadrao.descricao}}</td>
-                <td >{{itemPadrao.valorUnitario | currency}}</td>
-                <td >{{itemPadrao.qde}}</td>
-                <td >{{itemPadrao.valorTotal | currency}}</td>
+                <td>{{item.descricao}}</td>
+                <td >{{item.valorUnitario | currency}}</td>
+                <td >{{item.qde}}</td>
+                <td >{{item.valorTotal | currency}}</td>
              </tr> 
              <tr>
                 <td  colspan='4'><b>Valor Total</b></td>
@@ -234,12 +234,14 @@
 
 <i class="material-icons" id='edit' (click)="mostrarCampoObs()" (mouseover)="scaleEditMouseOver($event)" style='cursor:pointer;color: #FB8C00;margin-bottom:15px ;' title="Datas e Observações">edit</i>
 <div id='camposObsDatas' style='font-size:14px;display:none;margin-bottom:20px;'>
+    <!--
     <table width='300px'>
         <tr>
-            <td valign='top'>Pedido</td>
-            <td><input type="date" class="form-control" style="margin-left: 20px;margin-bottom:20px;" [value]="aberturaPedido.dataPedido"  ></td>
+            <td valign='top'>Dt. Pedido</td>
+            <td><input type="date" class="form-control" formControlName='dataPedido' style="margin-left: 20px;margin-bottom:20px;" [value]="aberturaPedido.dataPedido" (blur)="altDataPedido()"  ></td>
         </tr>
-    </table>  
+    </table> 
+--> 
 <input type='text' class="form-control" placeholder="Observações" formControlName="obs" (blur)="altObs()" style='margin-bottom:15px;'>
 </div>
 <div style='text-align:right' id='divBotaoContinuar'>
