--- a/src/app/home/confirm-entrega/confirm-entrega.component.html
+++ b/src/app/home/confirm-entrega/confirm-entrega.component.html
@@ -11,7 +11,14 @@
 </div>
 <div class="col-md-8">
     <div style='padding:15px; text-align: center; border:1px solid #000;width:630px' id='caixaNotaEntrega'>
-    <div style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#0000cc'><b>NOTA DE ENTREGA nº XX <br/>({{nomeClinica}})</b></div>
+    <table style='width: 600px !important;margin: auto;'>
+        <tr>
+            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº XX <br/>({{nomeClinica}})</b></td>
+        </tr>        
+    </table>
+    
+    
     <br>
     <div *ngFor="let pedido of pedidos">
         <table style='width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;'>
