--- a/src/app/home/pedido-fechado/pedido-fechado.component.html
+++ b/src/app/home/pedido-fechado/pedido-fechado.component.html
@@ -45,12 +45,12 @@
             <td><b>Qde</b></td>
             <td><b>Total</b></td>
          </tr>
-         <tr height="30" *ngFor="let itemPadrao of pedidoFechado.itensPadrao; let i= index; " style='border-bottom:1px solid #ccc;'>
+         <tr height="30" *ngFor="let item of pedidoFechado.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
             <td>{{i + 1}}</td>
-            <td>{{itemPadrao.descricao}}</td>
-            <td >{{itemPadrao.valorUnitario | currency}}</td>
-            <td >{{itemPadrao.qde}}</td>
-            <td >{{itemPadrao.valorTotal | currency}}</td>
+            <td>{{item.descricao}}</td>
+            <td >{{item.valorUnitario | currency}}</td>
+            <td >{{item.qde}}</td>
+            <td >{{item.valorTotal | currency}}</td>
          </tr> 
          <tr height="30" style='border-bottom:1px solid #ccc;'>
             <td  colspan='4'><b>Valor Total</b></td>
