Conferência de entrega

--- a/src/app/home/confirm-entrega/confirm-entrega.component.html
+++ b/src/app/home/confirm-entrega/confirm-entrega.component.html
@@ -4,10 +4,10 @@
 <br>
 <div class="row">
     <div class="col-md-4">
-<div style='text-align:center;'>----<br><br>
+     <div style='text-align: center;'>   
     <button class="btn btn-info btn-sm" (click)='acessoPedidosEmProcesso()' style='margin-bottom: 20px;'>VOLTAR</button><br> 
-    <button class="btn btn-info btn-sm" (click)='imprimir();'  >IMPRIMIR NOTA</button>    
-</div>
+    <button class="btn btn-info btn-sm" (click)='imprimir();'  >IMPRIMIR NOTA DE ENTREGA</button>    
+    </div>    
 </div>
 <div class="col-md-8">
     <div style='padding:15px; text-align: center; border:1px solid #000;width:630px' id='caixaNotaEntrega'>
