--- a/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
+++ b/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
@@ -67,7 +67,7 @@
 </ng-template>
   
 <br>
-<div style='text-align:center' id='titulo'><b>Pedidos em Processo</b></div><br>
+<div style='text-align:center' id='titulo'><b>Pedidos</b></div><br>
 <div class="container">
 <div class="alert alert-info" *ngIf="!carregamentoClinicas || !carregamentoPedidos">Aguarde enquanto os dados estão sendo carregados</div>
 <div id='dadosCarregados' *ngIf="carregamentoClinicas || carregamentoPedidos">
