Tela de Entrega

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir </a>
             <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Em Aberto</a>
-            <a class="dropdown-item" href="#">Concluídos</a>
+            <a class="dropdown-item" [routerLink]="['/home/entregas']">Concluídos</a>
             <a class="dropdown-item" href="#">Fechamento Financeiro</a>
           </div>
         </li>
