--- a/src/app/home/entregas/entregas.component.html
+++ b/src/app/home/entregas/entregas.component.html
@@ -1,26 +1,14 @@
-<br>
-<br>
-<br>
-<br>
-<div class="row">
-    <div class="col-md-4">
-     <div style='text-align: center;'>   
-    <button class="btn btn-info btn-sm" (click)='acessoPedidosEmProcesso()' style='margin-bottom: 20px;'>VOLTAR</button><br> 
-    <button class="btn btn-info btn-sm" (click)='imprimir();'  >IMPRIMIR NOTA DE ENTREGA</button>    
-    </div>    
-</div>
-<div class="col-md-8">
-    <div style='padding:15px; text-align: center; border:1px solid #000;width:630px' id='caixaNotaEntrega'>
+<div style='padding:15px; text-align: center; border:1px solid #000;width:630px;display:none;' id='caixaNotaEntrega'>
     <table style='width: 600px !important;margin: auto;'>
         <tr>
             <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
-            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº {{entregaId}} <br/>({{nomeClinica}})</b></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº {{entregaSelecionada.id}} <br/>({{nomeClinicaSelecionada}})</b></td>
         </tr>        
     </table>
     
     
     <br>
-    <div *ngFor="let pedido of pedidos">
+    <div *ngFor="let pedido of entregaSelecionada.pedidos">
         <table style='width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;'>
             <tr height="20">
                 <td style='text-align: center;' colspan='4'><b>PEDIDO nº {{pedido.id}}</b></td>
@@ -56,7 +44,7 @@
              </tr> 
              <tr height="30" style='border-bottom:1px solid #ccc;'>
                 <td  colspan='4'><b>Valor Total</b></td>
-                <td style='text-align: right;padding-right:5px'> <b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
+                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
                 
             <tr>
             <tr height="30" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
@@ -74,13 +62,60 @@
     </div>    
     <br>
     <br>
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total dos pedidos:</b> R$ {{totalEntrega | number : '1.2-2' }}</div>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total dos pedidos:</b>R$ {{totalEntregaSelecionada | number : '1.2-2' }}</div>
 
     <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
 
-    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome legível: </b>___________________________________________</div>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome legível:</b>___________________________________________</div>
     
     </div>
+
+
+
+
+
+<div style='text-align:center' id='titulo'><b>Entregas</b></div><br>
+<div class="container">
+<div class="alert alert-info" id='divAguardarDados'>Aguarde enquanto os dados estão sendo carregados</div>
+<div>
+    <table class='table table-dark' style='text-align: center;'>
+        <tr>
+        <td width="10%" >Id</td>
+
+        <td width='10%'>Emissão</td>
+        <td width='40%'>Pedidos</td>
+        <td width='15%'>Valor Total</td>
+        <td width='15%'>Recebedor</td>
+        <td width='10%'>Fechamento</td>
+        </tr>
+    </table> 
+
+    <div *ngFor="let clinica of clinicasComEntregas">
+        <div style='margin-bottom:20px;color:#000099;font-size:18px;text-align:center'>{{clinica.nomeSimp}}</div>
+
+        <table class='table table-hover'>
+            <tr *ngFor="let entrega of entregas">
+                <td *ngIf="entrega.clinicaId == clinica.id" width="5%">{{entrega.id}}</td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width="5%"><i class="material-icons" style="cursor:pointer" (click)="abreModalEntrega(entrega.id,clinica.nomeSimp )"> assignment</i></td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width='10%'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width='40%'>
+                      <table style='font-size:12px' width="90%">
+                          <tr *ngFor="let pedido of entrega.pedidos" height='20'>
+                             <td style='border:none !important;' width='20%'>{{pedido.id}}</td>
+                             <td style='border:none !important;' width='50%'>{{pedido.nomePaciente}}</td>
+                             <td style='border:none !important;text-align:right'>R$ {{pedido.valorLiquido | number : '1.2-2'}}</td>        
+                          </tr>    
+                      </table>      
+                </td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width='15%'>--</td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width='15%'>--</td>
+                <td *ngIf="entrega.clinicaId == clinica.id" width='10%'>--</td>
+            </tr>
+        </table>        
+
+    </div>
+
+
+
+
 </div>
-</div>
-<br>    
