--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,9 +23,9 @@
             Pedidos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir </a>
-            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Em Aberto</a>
-            <a class="dropdown-item" [routerLink]="['/home/entregas']">Concluídos</a>
+            <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir Pedido </a>
+            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos em Aberto</a>
+            <a class="dropdown-item" [routerLink]="['/home/entregas']">Entregas</a>
             <a class="dropdown-item" href="#">Fechamento Financeiro</a>
           </div>
         </li>
