--- a/src/app/home/abrirpedido/abrirpedido.component.html
+++ b/src/app/home/abrirpedido/abrirpedido.component.html
@@ -57,8 +57,8 @@
                     <select class='form-control' formControlName="tipoVariavel" id='selTipoProdutoVariavel' (click)="resetAvisoFormItem();"  style='display:none'>
                         <option value='' disabled>Tipo</option>
                         <option value=10>Diversos
-                        <option value=9>Grampo
-                        <option value=8>Máscara
+                        <option value=9> Grampo
+                        <option value=8> Placa de Dente
                     </select>
 
                  </td>   
