--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
             <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir Pedido </a>
             <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos em Aberto</a>
             <a class="dropdown-item" [routerLink]="['/home/entregas']">Entregas</a>
-            <a class="dropdown-item" href="#">Fechamento Financeiro</a>
+            <a class="dropdown-item" [routerLink]="['/home/fechamentos']">Fechamento</a>
           </div>
         </li>
         <li class="nav-item">
