--- a/src/app/home/fechamentos/fechamentos.component.html
+++ b/src/app/home/fechamentos/fechamentos.component.html
@@ -2,3 +2,220 @@
 <div class="container">
 <div class="alert alert-info" id='divAguardarDados'>Aguarde enquanto os dados estão sendo carregados</div>
 </div>
+
+<table class='table table-dark table-bordered' style='text-align: center;'>
+    <tr>
+    <td width="10%" colspan='2' >Id</td>
+
+    <td width='20%'>Data<br>Fechamento</td>
+    <td width='20%'>Valor Total</td>
+    <td width='20%' colspan='2'>Valor Pago</td>
+    <td width='30%'>Entregas<br><span style='font-size:11px'>(Número - Data Entrega - Valor)</span></td>
+    </tr>
+</table>
+<div *ngFor="let clinica of clinicasComFechamento">
+    <div style='margin-bottom:20px;color:#000099;font-size:18px;text-align:center'>{{clinica.nomeSimp}}</div>
+    <table class='table table-hover'>
+        <tr *ngFor="let fechamento of fechamentos">
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'>{{fechamento.id}}</td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'><i class="material-icons" style="cursor:pointer" (click)="abreModalFechamento(fechamento.id, clinica.nomeSimp)"> assignment</i></td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="20%" style='text-align:center'>{{fechamento.dataFechamento | date:'dd/MM/yyyy'}}</td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="20%" style='text-align:right'>{{fechamento.valorTotal | number : '1.2-2' }}</td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="5%" style='text-align:center'><i class="material-icons" style='cursor: pointer;' (click)="abreModalPagamento(fechamento.id, cadastroPagamento)">note_add </i></td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="15%" style='text-align:right'>{{fechamento.valorPago | number : '1.2-2' }}</td>
+            <td *ngIf="fechamento.clinicaId == clinica.id" width="30%" style='text-align:center'>
+                <table class='table table-sm table-bordered' style='font-size:12px' width="280px">
+                    <tr *ngFor='let entrega of fechamento.entregas '>
+                        <td width='10%' style='text-align:center;cursor:pointer;' (click)="abreModalEntrega(fechamento.id, entrega.id, clinica.nomeSimp)"><i class="material-icons" style='font-size:12px'>search </i></td>
+
+                        <td width='10%' style='text-align:center'>{{entrega.id}}</td>
+                        <td width='40%' style='text-align:center'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>
+                        <td width='40%' style='text-align:center'> {{entrega.totalEntrega | number : '1.2-2'}}</td>
+
+                    </tr>    
+                </table>    
+            </td>
+        </tr>    
+    </table>
+
+</div> 
+
+
+
+<div style='padding:15px; text-align: center; border:1px solid #000;width:630px;display:none' id='caixaNotaFechamento'>
+    <table style='width: 600px !important;margin: auto;'>
+        <tr>
+            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>FECHAMENTO nº {{fechamentoSelecionado.id}} <br/>({{nomeClinica}})</b></td>
+        </tr>        
+    </table>
+     
+    <br>
+    <table style='width: 600px !important;margin: auto;font-family: Arial, Helvetica, sans-serif;border-collapse: collapse;border:1px solid #ccc; font-size:14px;padding:5px;text-align:left; ' >
+        <tr height="30" style='border-bottom:1px solid #ccc;text-align:center;'>
+            <td colspan="4" style='text-align:center'><b>ENTREGAS</b></td>
+        </tr>
+        <tr height="20" style='border-bottom:1px solid #ccc;text-align:center;'>
+            <td width="10%"></td>
+            <td width="20%" style='text-align: center;'><b>Data</b></td>
+            
+            <td width="20%" style='text-align: center;'><b>Total</b></td>
+            <td width="50%" style='text-align: center;'><b>Pedidos</b><br><span style='font-size:11px'>(Número - Paciente - Valor)</span></td>
+         </tr>
+
+        
+         <tr *ngFor='let entrega of fechamentoSelecionado.entregas' style='border-bottom:1px solid #ccc;'>
+             <td style='text-align:center'>{{entrega.id}}</td>
+             <td style='text-align:center'>{{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>  
+             <td style='text-align: center;'>
+                R$ {{entrega.totalEntrega | number : '1.2-2'}}
+            </td>  
+             <td style='padding: 10px;'>
+                <table class='table table-sm table-bordered' style='font-size:12px;' width="250px">
+                    <tr *ngFor="let pedido of entrega.pedidos">
+                       <td width='20%'>{{pedido.id}}</td>
+                       <td width='40%'>{{pedido.nomePaciente}}</td>
+                       <td style='text-align:right'>R$ {{pedido.valorLiquido | number : '1.2-2'}}</td>        
+                    </tr>    
+                </table>   
+
+             </td> 
+             
+         </tr>
+    </table>
+<br>    
+<p style='text-align:center;font-family: Arial, Helvetica, sans-serif;'><b>Valor Total do Fechamento:</b> R$ {{fechamentoSelecionado.valorTotal | number : '1.2-2'}}    
+           
+</div> 
+
+
+<div style='padding:15px; text-align: center; border:1px solid #000;width:630px;display:none;' id='caixaNotaEntrega'>
+    <table style='width: 600px !important;margin: auto;'>
+        <tr>
+            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº {{entregaSelecionada.id}} <br/>({{nomeClinica}})</b></td>
+        </tr>        
+    </table>
+    
+    
+    <br>
+    <div *ngFor="let pedido of entregaSelecionada.pedidos">
+        <table style='width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;'>
+            <tr height="20">
+                <td style='text-align: center;' colspan='4'><b>PEDIDO nº {{pedido.id}}</b></td>
+            </tr>   
+            <tr height="20">
+                <td width='100'><b>Data Pedido</b></td>    
+                <td>{{pedido.dataPedido | date:'dd/MM/yyyy'}}</td>    
+            </tr>
+                   
+            <tr height="20">
+                <td ><b>Dentista</b></td>    
+                <td >{{pedido.dentista}}</td>    
+            </tr>
+            <tr height="20">
+                <td ><b>Paciente</b></td>    
+                <td >{{pedido.nomePaciente}}</td>    
+            </tr>
+        </table>
+        <table style='width: 600px !important;margin: auto;font-family: Arial, Helvetica, sans-serif;border-collapse: collapse;border:1px solid #ccc; font-size:12px;padding:5px;text-align:left; ' >
+            <tr height="30" style='border-bottom:1px solid #ccc;text-align:center;'>
+                <td width="10%"></td>
+                <td width="40%" style='text-align: center;'><b>Derscrição</b></td>
+                <td width="20%" style='text-align: center;'><b>Valor Unitário</b></td>
+                <td width="10%" style='text-align: center;'><b>Qde</b></td>
+                <td width="20%" style='text-align: center;'><b>Total</b></td>
+             </tr>
+             <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
+                <td style='text-align: center;'>{{i + 1}}</td>
+                <td>{{item.descricao}}</td>
+                <td style='text-align: right;padding-right:5px'>R$ {{item.valorUnitario | number : '1.2-2'}}</td>
+                <td style='text-align: center;'>{{item.qde}}</td>
+                <td style='text-align: right;padding-right:5px'>R$ {{item.valorTotal | number : '1.2-2'}}</td>
+             </tr> 
+             <tr height="20" style='border-bottom:1px solid #ccc;'>
+                <td  colspan='4'><b>Valor Total</b></td>
+                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal | number : '1.2-2' }}</b></td>
+                
+            <tr>
+            <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
+                <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
+                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorTotal - pedido.valorLiquido | number : '1.2-2' }}</b></td>
+                   
+            </tr> 
+            <tr height="20" *ngIf="pedido.desconto > 0">
+                <td colspan='4'><b>Valor Total Líquido</b></td>
+                <td style='text-align: right;padding-right:5px'><b>R$ {{pedido.valorLiquido | number : '1.2-2'}}</b></td>
+                    
+            </tr>      
+        </table>
+              <br>
+    </div>    
+    <br>
+    <br>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> R$ {{entregaSelecionada.totalEntrega | number : '1.2-2' }}</div>
+    <div *ngIf="!entregaSelecionada.recebedor">
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
+
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome legível:</b>___________________________________________</div>
+    </div>
+
+    <div *ngIf="entregaSelecionada.recebedor">
+        <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> {{entregaSelecionada.dataEntrega | date:'dd/MM/yyyy' }}</div>
+    
+        <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome:</b> {{entregaSelecionada.recebedor}}</div>
+        </div>
+
+    </div>
+
+
+    <ng-template #cadastroPagamento  let-modal>
+        <div class="modal-header">
+          <h4 class="modal-title">Inserir Pagamento</h4>
+          <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+           
+                   <br>
+                   <table class='table'>
+                      <tr>
+                        <td width='30%' style='border:none !important;'><input type='date' [(ngModel)]='dataCadastroPgto' class='form-control'></td>
+                        <td width='30%' style='border:none !important;'> <input type='number' [(ngModel)]='valorCadastroPgto' class='form-control' pattern="^\d+(?:\.\d{1,2})?$"></td>
+                        <td width='40%' style='border:none !important;'><input type='text' class='form-control' [(ngModel)]='obsCadastroPgto'  placeholder="Observações"  ></td>
+                    </tr>
+                    <tr>
+                        <td colspan='3' style='text-align:right;border:none !important;'>
+                            <button type="button" class="btn btn-info btn-sm" [disabled]="disabledConfPgto" (click)="inserirPagamento(fechamento.id); ">{{labelConfPgto}}</button>
+                        </td>
+                    </tr>    
+                    </table>
+                    <br>
+
+                    <table *ngIf="pagamentosEfetuados.length" class='table table-sm table-bordered' style='background-color: #aec6cf'>
+                        <tr>
+                            <td colspan='3' style='text-align:center'><b>Pagamentos Efetuados</b></td>   
+                        </tr>    
+                        <tr>
+                            <td style='text-align:center' width='30%'><b>Data</b></td>
+                            <td style='text-align:center' width='30%'><b>Valor</b></td>
+                            <td style='text-align:center' width='40%'><b>Obs</b></td>
+                        </tr>  
+                        <tr *ngFor="let pagamentoEfetuado of pagamentosEfetuados"> 
+                            <td>{{pagamentoEfetuado.dataPagamento | date:'dd/MM/yyyy' }}</td>
+                            <td style='text-align:right'> R$ {{pagamentoEfetuado.valor | number : '1.2-2' }}</td>
+                            <td>--</td> 
+                        </tr>    
+                    </table>    
+                    <br>
+                    
+                             
+                    <br>
+        
+       </div>
+      </div>
+     
+      
+      </ng-template>
